Change History
==============


1.8.0.beta4 (unreleased)
------------------------

- Nothing changed yet.


1.8.0.beta3 (2015-07-20)
------------------------

- Show loading on new form OK.


1.8.0.beta2 (2015-07-15)
------------------------

- Doc update.

- travis config fixes.


1.8.0.beta1 (2015-07-13)
------------------------

- Quick Editor working!

- Use bundles architecture and requirejs.


1.8.0.alpha1 (2015-06-29)
-------------------------

- Check commit log for changes related to P5 update.

- 1.8 will target Plone 5. Maintenance branch is 1.7-maintenance.

- Use content-core instead of main macro for templates using the
  main_template's master macro. Among fitting better in the standard plone
  environment and prepares for displaying in a full view (some modifications
  needed).
  [thet]

For previous changes, see docs/HISTORY.txt.