@@ -5,7 +5,8 @@ Change History
 1.8.0.beta4 (unreleased)
 ------------------------
 
-- Nothing changed yet.
+- Fixed ``propertiestool.xml`` to not break importing
+  ``types_not_searched``.
 
 
 1.8.0.beta3 (2015-07-20)
